@@ -1,5 +1,8 @@
 2003-01-22  Thomas Klausner  <wiz@dmath5.geometrie.tuwien.ac.at>
 
+	* Makefile.am (install-exec-hook): allow installation to succeed
+	if chown/chmod for installing dccserver setuid root fail.
+
 	* dccserver.c: add prototype for strlcpy if needed. Suggestion by
 	Per von Zweigbergk <pvz@e.kth.se>.
 	(get_file): add " got" in closing-connection-string. From Per von
